till login path

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://akashmeshram2486:akashiop@cluster0.s14kei5.mongodb.net/mernnnn?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=AKASHMESHRAM
